--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.5.1",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
-    "@types/express": "^4.17.21"
+    "@types/express": "^4.17.21",
+    "@types/uuid": "^10.0.0"
   }
 }
